--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,51 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+
+  cached_network_image: ^3.2.0
+  carousel_slider: ^4.0.0
+  cupertino_icons: ^1.0.4
+
+  firebase_auth: ^3.3.5
+  firebase_core: ^1.11.0
+  firebase_messaging: ^11.2.5
+  firebase_messaging_web: ^2.2.6
+
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^4.0.0
+  flutter_google_places: ^0.3.0
 
+  flutter_launcher_icons: ^0.9.2
+  flutter_local_notifications: ^9.2.0
+  flutter_native_timezone: ^2.0.0
+  flutter_rating_bar: ^4.0.0
+  flutter_secure_storage: ^5.0.2
+  font_awesome_flutter: ^9.2.0
+  geocoding: ^2.0.1
+  geolocator: ^8.0.1
+  google_fonts: ^2.2.0
+  google_maps_flutter: ^2.1.1
+  google_places_for_flutter: ^1.0.1
+  google_sign_in: ^5.2.2
+  http: ^0.13.4
+  image_picker: ^0.8.4+4
+  provider: ^6.0.2
+  pull_to_refresh: ^2.0.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.12
+  timezone: ^0.8.0
+
+  workmanager: ^0.4.1
+  youtube_player_flutter: ^8.0.0
+
+  connectivity_plus: ^2.2.0
+  flutter_easyloading: ^3.0.3
+  equatable: ^2.0.3
+  new_version: ^0.2.3
+  build_runner: ^2.1.7
+
 
 dev_dependencies:
   flutter_test:
